--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
 
   <script type="text/template" id="quote-template">
     <div class="view">
-      <label class="text"><%- text %> -- </label>
-      <label class="author"><%- author %></label>
-      <a class="destroy"></a>
+      <img src="<%- image %>" alt="<%- text %> -- <%- author %>">
     </div>
   </script>
 
