Add require support to load the libraries asynchronously.

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
       PL industries.
     </div>
 
-    <script src="quote.js"></script>
+    <script data-main="quote" src="require.js"></script>
 
     <!-- Templates -->
 
