--- a/app/index.html
+++ b/app/index.html
@@ -32,13 +32,7 @@
       PL industries.
     </div>
 
-    <script data-main="quote" src="require.js"></script>
-
-    <!-- Templates -->
-
-    <script type="text/template" id="quote-template">
-        <img src="<%- image %>" alt="<%- text %> -- <%- author %>">
-    </script>
+    <script data-main="jsx!quote" src="require.js"></script>
 
   </body>
 </html>
