--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
       PL industries.
     </div>
 
-    <script data-main="jsx!quote" src="require.js"></script>
+    <script data-main="quote" src="require.js"></script>
 
   </body>
 </html>
